--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 </head>
 <body>
   <h1>Masha and Rotem are together again!</h1>
+  <h2>Arriving July 23rd @ 13:35</h2>
   <div id="countdown">Loading...</div>
 
   <!-- Decorative icons -->
