Fix calendar feed link protocol in index.html - will it work?

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <a id="google-calendar" href="#" target="_blank" rel="noopener">Google Calendar</a>
         <button id="apple-calendar" type="button">Apple Calendar</button>
         <a id="outlook-calendar" href="#" target="_blank" rel="noopener">Outlook Calendar</a>
-        <a id="calendar-feed" href="webcal://to-masha.1-z.me/masha-calendar.ics">Calendar Feed</a>
+        <a id="calendar-feed" href="webcal:webcal://to-masha.1-z.me/masha-calendar.ics">Calendar Feed</a>
       </div>
       <button class="calendar-modal__close" type="button" id="calendar-close">Cancel</button>
     </div>
